k8s/sentiment-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sentiment-app
  template:
    metadata:
      labels:
        app: sentiment-app
    spec:
      containers:
        - name: sentiment-app
          image: sentiment-analyzer:latest
          imagePullPolicy: IfNotPresent  # This prevents Kubernetes from trying to pull the image
          ports:
            - containerPort: 8080
