k8s/sentiment-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-app-service
spec:
  selector:
    app: sentiment-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080 # Optional: specific port on 192.168.49.2 (30000-32767)
  type: NodePort
